# PeakFit

./: .gitignore  .pre-commit-config.yaml  2D_ARRAY_FIX.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  IMPROVEMENTS.md  LEGACY_ISSUES.md  NUMBA_OPTIMIZATION_SUMMARY.md  PARALLEL_FITTING_STATUS.md  PR_MESSAGE.md  PULL_REQUEST_DESCRIPTION.md  PeakFit_Architecture_Refactoring_Plan.md  PeakFit_Cleanup_Prompt.md  PeakFit_Streamlining_Prompt.md  README.md  Refactoring_Followup_Plan.md  TERMINAL_OUTPUT_STYLE_GUIDE.md  UI_UX_IMPROVEMENTS_SUMMARY.md  VALIDATION_REPORT.md  analyze_residuals.py  benchmark_amplitudes.py  dev-setup.sh  pyproject.toml  reproduce_jacobian.py  test_noapod.py  verify_jacobian.py  verify_overflow.py
.github/instructions/: nd-support.instructions.md  output-system.instructions.md  peakfit.instructions.md
.github/workflows/: ci.yml  python-publish.yml
benchmarks/: benchmark_apodization.py  benchmark_catalog.py  benchmark_comprehensive.py
docs/: APODIZATION_OPTIMIZATION.md  BATCH_APOD_INTEGRATION.md  MCMC_DIAGNOSTICS.md  README.md  constraints_and_protocols.md  dependency-map.md  optimization_guide.md  output-specification.md  output_system.md  strategies.md  terminal-output-improvements.md  ui-style-guide.md  ui-ux-improvements-summary.md  validation-report.md
docs/architecture/: analyze_services.md  fit-pipeline.md  output_architecture.md  overview.md
docs/development/: terminal-output-style-guide.md  ui-style-guide.md
examples/: README.md  demo_batch_optimization.py  peakfit.toml  run.sh
examples/01-basic-fitting/: README.md  run.sh
examples/02-advanced-fitting/: README.md  run.sh
examples/02-advanced-fitting/Fits_test/: 1000N-H.out  1002N-H.out  100N-H.out  1011N-H.out  1013N-H.out  101N-H.out  102N-H.out  103N-H.out  104N-H.out  105N-H.out  106N-H.out  107N-H.out  108N-H.out  109N-H.out  10N-H.out  110N-H.out  111N-H.out  112N-H.out  113N-H.out  114N-H.out  115N-H.out  116N-H.out  118N-H.out  119N-H.out  11N-H.out  120N-H.out  121N-H.out  122N-H.out  123N-H.out  124N-H.out  125N-H.out  126EN-H.out  126N-H.out  127N-H.out  128N-H.out  129N-H.out  12N-H.out  130N-H.out  131N-H.out  132N-H.out  (+128 more)
examples/03-global-optimization/: README.md  run.sh
examples/04-uncertainty-analysis/: README.md  run.sh
examples/04-uncertainty-analysis/data/: pseudo3d.ft2
examples/05-batch-processing/: README.md
examples/05-constraints-and-protocols/: README.md  run.sh
examples/05-constraints-and-protocols/configs/: multi_step.toml  per_peak.toml  position_windows.toml
examples/05-constraints-and-protocols/data/: b1_offsets.txt  pseudo3d.ft2  pseudo3d.list
peakfit/: __init__.py  cli.py  cli_legacy.py  computing.py  messages.py  noise.py  peak.py  peakfit.py  peaklist.py  shapes.py  spectra.py  writing.py
peakfit/cli/: app.py  callbacks.py  fit_command.py
peakfit/config/: __init__.py
peakfit/core/: advanced_optimization.py  backend.py  benchmarks.py  caching.py  fast_fit.py  fitting.py  jax_backend.py  jax_fitting.py  optimized.py  parallel.py  profiling.py
peakfit/io/: config.py
peakfit/plotting/: common.py
peakfit/plotting/plots/: spectra.py
src/peakfit/: __init__.py  __main__.py  clustering.py  computing.py  constants.py  messages.py  nmrpipe.py  noise.py  peak.py  peaklist.py  shapes.py  spectra.py  typing.py  writing.py
src/peakfit/analysis/: __init__.py  benchmarks.py  caching.py  profiling.py
src/peakfit/cli/: __init__.py  _analyze_formatters.py  analyze_command.py  app.py  callbacks.py  fit_command.py  models.py  plot_command.py  validate_command.py
src/peakfit/config/: __init__.py
src/peakfit/contrib/: __init__.py
src/peakfit/core/: __init__.py  advanced_optimization.py  backend.py  benchmarks.py  caching.py  constants.py  diagnostics.py  factories.py  fast_fit.py  fitting.py  jax_impl.py  lineshapes.py  models.py  optimized.py  optimizer_jax.py  parallel.py  profiling.py  scipy_optimizer.py  vectorized_jax.py
src/peakfit/data/: __init__.py  clustering.py  noise.py  peaks.py  spectrum.py
src/peakfit/diagnostics/: __init__.py  burnin.py  convergence.py  plots.py
src/peakfit/fitting/: __init__.py  advanced.py  computation.py  optimizer.py  output.py  parallel.py  results.py  simulation.py
src/peakfit/infra/: __init__.py  state.py
src/peakfit/io/: __init__.py  config.py  directory.py  output.py  schemas.py  state.py
src/peakfit/lineshapes/: __init__.py  catalog.py  functions.py  models.py
src/peakfit/models/: __init__.py  config.py
src/peakfit/optimizers/: __init__.py
src/peakfit/plotting/: main.py  (+5 more)
tests/: __init__.py  conftest.py  test_edge_cases.py  test_lineshapes.py  test_lineshapes_correctness.py  test_lineshapes_performance.py  test_plotting_integration.py  validate_modernization.py
tests/integration/: __init__.py  test_cli_commands.py  test_synthetic.py
tests/regression/: test_varpro_consistency.py
tests/unit/: __init__.py  test_amplitude_uncertainty.py  test_analyze_state_service.py  test_backend.py  test_batch_apod_integration.py  test_caching.py  test_cli.py  test_cli_validate_models.py  test_clustering.py  test_config.py  test_constraints.py  test_fast_fit.py  test_global_strategies.py  test_io_writers_new.py  test_lineshape_factory.py  test_lineshapes.py  test_lineshapes_jax.py  test_mcmc_analysis_service.py  test_messages.py  test_models.py  test_multi_peak_apod.py  test_nmrpipe.py  test_noise.py  test_optimizer_jax.py  test_output_system.py  test_parallel.py  test_parameter_correlation_service.py  test_parameter_uncertainty_service.py  test_parameters.py  test_peaklist.py  test_plotting_headless.py  test_profile_analysis_service.py  test_protocol.py  test_reporter.py  test_scipy_optimizer.py  test_shapes.py  test_spectra.py  test_state_repository.py  test_vectorized_jax.py  test_writing.py
tools/: dependency_snapshot.py  validate_imports.py
tools/analysis/: __init__.py  benchmarks.py  profiling.py
tools/contracts/: importlinter.yml
tools/profiling/: parse_scalene_summary.py  profile_runner.py
tools/validation/: README.md  __init__.py  validate_noapod.py  verify_computation.py
(+125 files in other folders)
